--- a/front-end/src/components/Board/Board.css
+++ b/front-end/src/components/Board/Board.css
@@ -1,6 +1,7 @@
 
 .board {
-
+  display:grid;
+  grid-template-columns: calc(0.25*var(--tile-size)) calc(8*var(--tile-size));
 }
 
 .tiles{
@@ -8,11 +9,6 @@
   grid-template-columns: repeat(8,var(--tile-size));
   grid-template-rows: repeat(8,var(--tile-size));
   width: calc(8*var(--tile-size));
-}
-
-
-.tile{
-
 }
 
 .tile--light{
