--- a/front-end/src/components/Board/Board.css
+++ b/front-end/src/components/Board/Board.css
@@ -2,7 +2,7 @@
 .board {
   display:grid;
   grid-template-columns: calc(0.25*var(--tile-size)) calc(8*var(--tile-size));
-  
+  position: relative;
   
 }
 
