--- a/front-end/src/components/Pieces/Pieces.css
+++ b/front-end/src/components/Pieces/Pieces.css
@@ -1,10 +1,9 @@
-.pieces{
-  background-color: rgba(200,0,0,0.5);
-  position: absolute;
-  top: 0;
+.pieces {
   right: 0;
-  left: calc(0.25*var(--tile-size));
-  bottom: calc(0,25*var(--tile-size));
+  top: 0;
+  position: absolute;
+  left: calc(.25*var(--tile-size));
+  bottom: calc(.25*var(--tile-size));  
 }
 
 .piece {
